--- a/OptimalWork/Views/Home/Index.cshtml
+++ b/OptimalWork/Views/Home/Index.cshtml
@@ -7,26 +7,29 @@
         <div class="slider_container">
             <div class="slide">
                 <!-- Slide image -->
-                <img src="~/images/slider1.jpg" class="img-responsive" alt="" />
+                <img src="~/images/slider3.jpg" class="img-responsive" alt="" />
                 <!-- /Slide image -->
                 <!-- Texts container -->
                 <div class="slide_content">
                     <div class="slide_content_wrap">
                         <!-- Text title -->
-                        <h1 class="title">Run Over<br>Everything</h1>
+                        <h1 class="title">La mejor<br>asesoría...</h1>
                         <!-- /Text title -->
-                        <div class="button"><a href="#">See Details</a></div>
+
+                        @*<div class="button"><a href="#">See Details</a></div>*@
                     </div>
                 </div>
                 <!-- /Texts container -->
             </div>
             <!-- /Duplicate to create more slides -->
             <div class="slide">
-                <img src="~/images/slider2.jpg" class="img-responsive" alt="" />
+                <img src="~/images/slider4.jpg" class="img-responsive" alt="" />
                 <div class="slide_content">
                     <div class="slide_content_wrap">
-                        <h1 class="title">Run Over<br>Everything</h1>
-                        <div class="button"><a href="#">See Details</a></div>
+                        <h1 class="title">Trabajo Óptimo<br>A su servicio</h1>
+
+                        @*<div class="button"><a href="#">See Details</a></div>*@
+
                     </div>
                 </div>
             </div>
@@ -40,17 +43,18 @@
 </div>
 <div class="main">
     <div class="content-top">
-        <h2>snowboards</h2>
-        <p>hendrerit in vulputate velit esse molestie consequat, vel illum dolore</p>
+        <h2>Te abrimos la puerta al éxito</h2>
+        <p>Contamos con un excelente aliado que es la tecnología y por esta razón ponemos a tu disposición nuestro servicio que te permitirá estar bien asesorado sobre el avance y las actualidades de tu informe de tesis.</p>
         <div class="close_but"><i class="close1"> </i></div>
         <ul id="flexiselDemo3">
-            <li><img src="~/images/board1.jpg" /></li>
-            <li><img src="~/images/board2.jpg" /></li>
-            <li><img src="~/images/board3.jpg" /></li>
-            <li><img src="~/images/board4.jpg" /></li>
-            <li><img src="~/images/board5.jpg" /></li>
+            <li><img src="~/images/No2.jpg" /></li>
+            <li><img src="~/images/No4.jpg" /></li>
+            <li><img src="~/images/No6.jpg" /></li>
+            <li><img src="~/images/No7.jpg" /></li>
+            <li><img src="~/images/recursos.jpg" /></li>
+            
         </ul>
-        <h3>SnowBoard Extreme Series</h3>
+        <h3>Trabaja con nosotros</h3>
         <script type="text/javascript">
 		$(window).load(function() {
 			$("#flexiselDemo3").flexisel({
@@ -85,79 +89,12 @@
     <div class="container">
         <div class="row content_bottom-text">
             <div class="col-md-7">
-                <h3>The Mountains<br>Snowboarding</h3>
-                <p class="m_1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio.</p>
-                <p class="m_2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio.</p>
+                <h3>Acerca de <br>Nosotros</h3>
+                <p class="m_1">Optimal Work es una empresa de servicios de consultoría y/o asesoría a nivel nacional, atendiendo a empresarios en cuanto a las problemáticas de su gestión; Como también a estudiantes de la facultad de ciencias empresariales en sus proyectos y desarrollos de investigación, contamos con colaboradores capacitados en visión innovadora y alianzas estratégicas sólidas, que permiten brindar un servicio de calidad e innovación a nuestros clientes, incrementando de esta manera la competitividad comercial del país.</p>
+                <p class="m_2">Nuestra misión es ser un referente importante e innovador para los empresarios y estudiantes de las diferentes facultadaes, en los servicios de consultoría y/o asesoría, con una alta y sólida presencia en el país, teniendo como base el compromiso de todos los integrantes en el desarrollo sostenible del Perú.</p>
             </div>
         </div>
     </div>
 </div>
-<div class="features">
-    <div class="container">
-        <h3 class="m_3">Features</h3>
-        <div class="close_but"><i class="close1"> </i></div>
-        <div class="row">
-            <div class="col-md-3 top_box">
-                <div class="view view-ninth">
-                    <a href="single.html">
-                        <img src="~/images/pic1.jpg" class="img-responsive" alt="" />
-                        <div class="mask mask-1"> </div>
-                        <div class="mask mask-2"> </div>
-                        <div class="content">
-                            <h2>Hover Style #9</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <h4 class="m_4"><a href="#">nostrud exerci ullamcorper</a></h4>
-            <p class="m_5">claritatem insitam</p>
-        </div>
-        <div class="col-md-3 top_box">
-            <div class="view view-ninth">
-                <a href="single.html">
-                    <img src="~/images/pic2.jpg" class="img-responsive" alt="" />
-                    <div class="mask mask-1"> </div>
-                    <div class="mask mask-2"> </div>
-                    <div class="content">
-                        <h2>Hover Style #9</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
-                    </div>
-                </a>
-            </div>
-            <h4 class="m_4"><a href="#">nostrud exerci ullamcorper</a></h4>
-            <p class="m_5">claritatem insitam</p>
-        </div>
-        <div class="col-md-3 top_box">
-            <div class="view view-ninth">
-                <a href="single.html">
-                    <img src="~/images/pic3.jpg" class="img-responsive" alt="" />
-                    <div class="mask mask-1"> </div>
-                    <div class="mask mask-2"> </div>
-                    <div class="content">
-                        <h2>Hover Style #9</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
-                    </div>
-                </a>
-            </div>
-            <h4 class="m_4"><a href="#">nostrud exerci ullamcorper</a></h4>
-            <p class="m_5">claritatem insitam</p>
-        </div>
-        <div class="col-md-3 top_box1">
-            <div class="view view-ninth">
-                <a href="single.html">
-                    <img src="~/images/pic4.jpg" class="img-responsive" alt="" />
-                    <div class="mask mask-1"> </div>
-                    <div class="mask mask-2"> </div>
-                    <div class="content">
-                        <h2>Hover Style #9</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
-                    </div>
-                </a>
-            </div>
-            <h4 class="m_4"><a href="#">nostrud exerci ullamcorper</a></h4>
-            <p class="m_5">claritatem insitam</p>
-        </div>
-    </div>
-</div>
+
 	    </div>
